RESOLVED FIXED67045
Fix handling of keyup events in the new Cocoa text input model
https://bugs.webkit.org/show_bug.cgi?id=67045
Summary Fix handling of keyup events in the new Cocoa text input model
Anders Carlsson
Reported 2011-08-26 10:36:39 PDT
Fix handling of keyup events in the new Cocoa text input model
Attachments
Patch (4.36 KB, patch)
2011-08-26 10:40 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-08-26 10:40:59 PDT
Anders Carlsson
Comment 2 2011-08-26 10:45:53 PDT
Note You need to log in before you can comment on or make changes to this bug.